--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <div class="row g-3">
           
 
-            <div class="col-12">
+            <!-- <div class="col-12">
               <div class="input-group mb-3">
                 <input type="file" class="form-control" id="inputGroupFile02">
                 <label class="input-group-text" for="inputGroupFile02">Upload</label>
               </div>
-            </div>
+            </div> -->
 
             <div class="col-sm-6">
               <label for="letterwidth" class="form-label">Ancho</label>
@@ -130,6 +130,7 @@
           <hr class="my-4">
 
           <button class="w-100 btn btn-primary btn-lg" type="submit">Calcular</button>
+          <button id="whatsappBtn" class="w-100 btn btn-primary btn-lg" type="submit">Solicitar Presupuesto</button>
         </form>
       </div>
     </div>
