--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
           </div>
 
-            <div class="col-12 mt-3">
+            <!-- <div class="col-12 mt-3">
               <label for="email" class="form-label">Email <span class="text-muted">(requerido)</span></label>
               <input type="email" class="form-control" id="email" placeholder="tucorreo@ejemplo.com" required>
               <div class="invalid-feedback">
@@ -125,7 +125,7 @@
               <div class="invalid-feedback">
                ingrese su contacto de whatsapp
               </div>
-            </div>
+            </div> -->
 
           <hr class="my-4">
 
